fix: #22 帳戶類別預設不能排序

--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -35,7 +35,7 @@
             <th pSortableColumn="type">
               <div class="flex justify-content-start align-items-center">
                 <p-columnFilter field="type" matchMode="in" display="menu" [showMatchModes]="false"
-                                [showOperator]="false"
+                                [showOperator]="false" (click)="clickFilter()"
                                 [showAddButton]="false" [showClearButton]="false" [showApplyButton]="false">
                   <ng-template pTemplate="filter">
                     <p-multiSelect [showToggleAll]="true" [(ngModel)]="selectedValue" [options]="type" placeholder="勾選帳戶類別"
