--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -7,8 +7,8 @@
           <p-button icon="pi pi-plus" (click)="showDialog('add')" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [value]="GetAllContract" [paginator]="true" [rows]="5" [totalRecords]="totalRecords"
-               [rowsPerPageOptions]="[10, 15]" [(first)]="first" #dt1 [loading]="loading"
+      <p-table [value]="GetAllContract" [paginator]="true" [rows]="1000000" [totalRecords]="totalRecords"
+               [rowsPerPageOptions]="[10, 20]" [(first)]="first" #dt1 [loading]="loading"
                [showCurrentPageReport]="true" [lazy]="true" (onLazyLoad)="loadPostsLazy($event)"
                currentPageReportTemplate="共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
