--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -11,8 +11,9 @@
         </span>
         </div>
       </div>
-      <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="total" [rows]="10" [paginator]="true"
-               (onLazyLoad)="loadTable($event)" [loading]="loading">
+      <p-table #dt [value]="getData" [lazy]="true" [totalRecords]="totalRecords" [rows]="10000"  [rowsPerPageOptions]="[10, 20]" [paginator]="true"
+               (onLazyLoad)="loadTable($event)" [loading]="loading" currentPageReportTemplate="共 {totalRecords} 筆"
+               [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
           <div class="flex align-items-center ml-2">
             <span class="text-400 pi pi-circle-fill mr-1"></span>
