--- a/src/app/views/features/account/account.component.html
+++ b/src/app/views/features/account/account.component.html
@@ -32,26 +32,24 @@
             <th pSortableColumn="phone_number">電話
               <p-sortIcon field="phone_number"></p-sortIcon>
             </th>
-            <th pSortableColumn="type">
-              <div class="flex justify-content-start align-items-center">
-                <p-columnFilter field="type" matchMode="in" display="menu" [showMatchModes]="false"
-                                [showOperator]="false" (click)="clickHeader()"
-                                [showAddButton]="false" [showClearButton]="false" [showApplyButton]="false">
-                  <ng-template pTemplate="filter">
-                    <p-multiSelect [showToggleAll]="true" [(ngModel)]="selectedValue" [options]="type" placeholder="勾選帳戶類別"
-                                   optionLabel="name" (onChange)="selected($event)">
-                      <!--                    <ng-template let-option pTemplate="item">-->
-                      <!--                      <div class="inline-block vertical-align-middle">-->
-                      <!--                        <i [class]=option.icon style="font-size: 1rem"></i>-->
-                      <!--                        <span class="ml-1 mt-1">{{ option.name }}</span>-->
-                      <!--                      </div>-->
-                      <!--                    </ng-template>-->
-                    </p-multiSelect>
-                  </ng-template>
-                </p-columnFilter>
-                類型
-                <p-sortIcon field="type" (click)="clickHeader()"></p-sortIcon>
-              </div>
+            <th>
+              類型
+              <p-columnFilter field="type" matchMode="in" display="menu" [showMatchModes]="false"
+                              [showOperator]="false"
+                              [showAddButton]="false" [showClearButton]="false" [showApplyButton]="false">
+                <ng-template pTemplate="filter">
+                  <p-multiSelect [showToggleAll]="false" [(ngModel)]="selectedValue" [options]="type"
+                                 placeholder="勾選帳戶類別"
+                                 optionLabel="name" (onChange)="selected($event)">
+                    <!--                    <ng-template let-option pTemplate="item">-->
+                    <!--                      <div class="inline-block vertical-align-middle">-->
+                    <!--                        <i [class]=option.icon style="font-size: 1rem"></i>-->
+                    <!--                        <span class="ml-1 mt-1">{{ option.name }}</span>-->
+                    <!--                      </div>-->
+                    <!--                    </ng-template>-->
+                  </p-multiSelect>
+                </ng-template>
+              </p-columnFilter>
             </th>
             <th>業務員</th>
             <th></th>
