fix: #24: 報價同步化 修改成是或否

--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -73,7 +73,7 @@
             </td>
             <td>{{ quote.name }}</td>
             <td>{{ quote.opportunity_name }}</td>
-            <td>{{ quote.is_syncing }}</td>
+            <td>{{ quote.syncing }}</td>
             <td>{{ quote.expiration_date }}</td>
             <td>{{ quote.sub_total }}</td>
             <td>{{ quote.grand_total }}</td>
