--- a/src/app/views/features/quote/view-quote/view-quote.component.html
+++ b/src/app/views/features/quote/view-quote/view-quote.component.html
@@ -21,8 +21,7 @@
               <label>{{quote_form.controls['opportunity_name'].value}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
-              <label>同步到商機: </label>
-              <label>{{GetOneIsSyncing}}</label>
+              <label>同步到商機: {{GetOneIsSyncing}}</label>
             </div>
             <div class="col-12 flex justify-content-center">
               <label>小計: NT$ {{quote_form.controls['sub_total'].value}}</label>
