fix: #29 商品/服務無法刪除

--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -4,7 +4,7 @@
       <h2>聯絡人</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" pTooltip="新增聯絡人" tooltipPosition="top" icon="pi pi-plus"
+          <p-button (click)="showDialog('add')" pTooltip="新增聯絡人" icon="pi pi-plus"
                     styleClass="p-button-text"></p-button>
         </span>
       </div>
