--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -5,7 +5,7 @@
       <div class="flex justify-content-end">
         <span class="p-buttonset">
           <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"
-                    pTooltip="新增報價" tooltipPosition="top"></p-button>
+                    pTooltip="新增報價"></p-button>
         </span>
       </div>
       <p-table [rowsPerPageOptions]="[10, 20]" [value]="GetAllQuote" [paginator]="true"
