--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -4,7 +4,8 @@
       <h2>行銷活動</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"
+                    pTooltip="新增行銷活動"></p-button>
         </span>
       </div>
       <p-table [rowsPerPageOptions]="[10, 20]" [(first)]="first" [showCurrentPageReport]="true"
