--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -5,7 +5,7 @@
       <div class="flex flex-row justify-content-start">
         <div class="flex ml-auto mr-2">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" pTooltip="新增線索" tooltipPosition="top" icon="pi pi-plus"
+          <p-button (click)="showDialog('add')" pTooltip="新增線索" icon="pi pi-plus"
                     styleClass="p-button-text"></p-button>
         </span>
         </div>
