--- a/src/app/views/features/order/view-order/view-order.component.html
+++ b/src/app/views/features/order/view-order/view-order.component.html
@@ -64,7 +64,8 @@
           </div>
           <p-tabView>
             <p-tabPanel header="詳細">
-              <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="GetOrderProduct" [(selection)]="deleteSelectOrderProduct">
+              <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="GetOrderProduct"
+                       [(selection)]="deleteSelectOrderProduct">
                 <ng-template pTemplate="caption">
                   <div class="flex">
                     <div class="mt-2">
@@ -77,19 +78,19 @@
                       <ng-container *ngIf="stage =='草稿'">
                         <p-button icon="pi pi-plus" pTooltip="新增商品" (click)="addProduct()" tooltipPosition="top"
                                   styleClass="p-button-text"></p-button>
-                      <p-button icon="pi pi-pencil" pTooltip="編輯所有訂單商品" (click)="editAllProduct()"
-                                tooltipPosition="top"
-                                styleClass="p-button-text"></p-button>
-                      <p-button icon="pi pi-trash" pTooltip="刪除所選商品/服務" (click)="deleteOrderProductRequest()"
-                                tooltipPosition="top"
-                                styleClass="p-button-text"></p-button>
+                        <p-button icon="pi pi-pencil" pTooltip="編輯所有訂單商品" (click)="editAllProduct()"
+                                  tooltipPosition="top"
+                                  styleClass="p-button-text"></p-button>
+                        <p-button icon="pi pi-trash" pTooltip="刪除所選商品/服務" (click)="deleteOrderProductRequest()"
+                                  tooltipPosition="top"
+                                  styleClass="p-button-text"></p-button>
                       </ng-container>
                     </div>
                   </div>
                 </ng-template>
                 <ng-template pTemplate="header">
                   <tr>
-                    <th style="width: 4rem" *ngIf="stage =='草稿'" >
+                    <th style="width: 4rem" *ngIf="stage =='草稿'">
                       <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                     </th>
                     <th>名稱</th>
@@ -104,7 +105,7 @@
                 <ng-template pTemplate="body" let-order_product>
                   <tr>
                     <td *ngIf="stage =='草稿'">
-                      <p-tableCheckbox [value]="order_product" ></p-tableCheckbox>
+                      <p-tableCheckbox [value]="order_product"></p-tableCheckbox>
                     </td>
                     <td>{{ order_product.product_name }}</td>
                     <td>{{ order_product.standard_price }}</td>
@@ -114,10 +115,12 @@
                     <td>{{ order_product.sub_total }}</td>
                     <td>
                       <div class="flex justify-content-end" *ngIf="stage =='草稿'">
-                        <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top" (click)="editOneProduct(order_product)"
+                        <p-button icon="pi pi-pencil" pTooltip="編輯" tooltipPosition="top"
+                                  (click)="editOneProduct(order_product)"
                                   styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                         <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"
-                                  pTooltip="刪除" tooltipPosition="top" (click)="deleteOneOrderProductRequest(order_product.order_product_id)"></p-button>
+                                  pTooltip="刪除" tooltipPosition="top"
+                                  (click)="deleteOneOrderProductRequest(order_product.order_product_id)"></p-button>
                       </div>
                     </td>
                   </tr>
@@ -208,38 +211,38 @@
                   </div>
                 </div>
               </div>
-              <div class="flex justify-content-end">
-                <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
-                <ng-container *ngIf="stage !== '啟動中'">
-                <p-button label="儲存" (click)="patchOrderRequest()"
-                          styleClass="p-button-info"></p-button>
-                </ng-container>
-              </div>
+              <ng-container *ngIf="stage !== '啟動中'">
+                <div class="flex justify-content-end">
+                  <p-button label="取消" (click)="showAlertCancel()" styleClass="p-button-secondary mr-2"></p-button>
+                  <p-button label="儲存" (click)="patchOrderRequest()"
+                            styleClass="p-button-info"></p-button>
+                </div>
+              </ng-container>
             </p-tabPanel>
             <p-tabPanel header="歷程記錄">
-                <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="GetOrderHistoricalRecords">
-                  <ng-template pTemplate="caption">
-                    <div class="flex justify-content-between">
-                      <div class="justify-content-start mt-2">
-                        <label>訂單歷程記錄</label>
-                      </div>
+              <p-table [rowsPerPageOptions]="[5, 10, 15]" [lazy]="true" [value]="GetOrderHistoricalRecords">
+                <ng-template pTemplate="caption">
+                  <div class="flex justify-content-between">
+                    <div class="justify-content-start mt-2">
+                      <label>訂單歷程記錄</label>
                     </div>
-                  </ng-template>
-                  <ng-template pTemplate="header">
-                    <tr>
-                      <th>日期</th>
-                      <th>使用者</th>
-                      <th>描述</th>
-                    </tr>
-                  </ng-template>
-                  <ng-template pTemplate="body" let-order_log>
-                    <tr>
-                      <td>{{ order_log.modified_at }}</td>
-                      <td>{{ order_log.modified_by }}</td>
-                      <td>{{ order_log.description }}</td>
-                    </tr>
-                  </ng-template>
-                </p-table>
+                  </div>
+                </ng-template>
+                <ng-template pTemplate="header">
+                  <tr>
+                    <th>日期</th>
+                    <th>使用者</th>
+                    <th>描述</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-order_log>
+                  <tr>
+                    <td>{{ order_log.modified_at }}</td>
+                    <td>{{ order_log.modified_by }}</td>
+                    <td>{{ order_log.description }}</td>
+                  </tr>
+                </ng-template>
+              </p-table>
             </p-tabPanel>
           </p-tabView>
         </p-card>
@@ -308,7 +311,8 @@
 
 <!-- 編輯所選訂單產品dialog -->
 <form [formGroup]="edit_product_form">
-  <p-dialog *ngIf="editSelectOrderProducts" [(visible)]="editSelectOrderProducts" header=編輯選擇訂單商品 [modal]="true">
+  <p-dialog *ngIf="editSelectOrderProducts" [(visible)]="editSelectOrderProducts" header=編輯選擇訂單商品
+            [modal]="true">
     <p-table [value]="selectedProducts">
       <ng-template pTemplate="header">
         <tr>
@@ -325,13 +329,14 @@
           <td>{{ product.price }}</td>
           <td>{{ product.quote_price }}</td>
           <td>
-            <p-inputNumber inputId="integeronly" [min]="0" [formControlName]="'quantity_' + product.product_id" [minFractionDigits]="0"
+            <p-inputNumber inputId="integeronly" [min]="0" [formControlName]="'quantity_' + product.product_id"
+                           [minFractionDigits]="0"
                            [ngClass]="{'ng-dirty': edit_product_form.controls['quantity_' +  product.product_id]?.hasError('required') && edit_product_form.controls['quantity_' +  product.product_id]?.touched}">
             </p-inputNumber>
           </td>
           <td>
             <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
-                           [min]="0" [formControlName]="'unit_price_' + product.product_id"  [minFractionDigits]="0"
+                           [min]="0" [formControlName]="'unit_price_' + product.product_id" [minFractionDigits]="0"
                            [ngClass]="{'ng-dirty': edit_product_form.controls['unit_price_' + product.product_id]?.hasError('required') && edit_product_form.controls['unit_price_' +  product.product_id]?.touched}">
             </p-inputNumber>
           </td>
@@ -366,13 +371,15 @@
           <td>{{ product.standard_price }}</td>
           <td>{{ product.quote_price }}</td>
           <td>
-            <p-inputNumber inputId="integeronly" [min]="0" [formControlName]="'quantity_' + product.order_product_id" [minFractionDigits]="0"
+            <p-inputNumber inputId="integeronly" [min]="0" [formControlName]="'quantity_' + product.order_product_id"
+                           [minFractionDigits]="0"
                            [ngClass]="{'ng-dirty': edit_product_form.controls['quantity_' +  product.order_product_id]?.hasError('required') && edit_product_form.controls['quantity_' +  product.order_product_id]?.touched}">
             </p-inputNumber>
           </td>
           <td>
             <p-inputNumber inputId="integeronly" mode="currency" currency="TWD" locale="en-tw"
-                           [min]="0" [formControlName]="'unit_price_' + product.order_product_id"  [minFractionDigits]="0"
+                           [min]="0" [formControlName]="'unit_price_' + product.order_product_id"
+                           [minFractionDigits]="0"
                            [ngClass]="{'ng-dirty': edit_product_form.controls['unit_price_' + product.order_product_id]?.hasError('required') && edit_product_form.controls['unit_price_' +  product.order_product_id]?.touched}">
             </p-inputNumber>
           </td>
