--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -132,7 +132,8 @@
       <div class="col-12 md:col-6 lg:col-6">
         <div class="field">
           <label>金額</label>
-          <input pInputText formControlName="amount">
+          <br>
+          <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="amount" [minFractionDigits]="0"></p-inputNumber>
         </div>
       </div>
       <div class="col-12 md:col-6 lg:col-6">
