--- a/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
+++ b/src/app/views/features/opportunity/view-opportunity/view-opportunity.component.html
@@ -134,7 +134,11 @@
                 <div class="col-12 md:col-6 lg:col-6">
                   <div class="field">
                     <label>金額</label>
-                    <input pInputText formControlName="amount">
+                    <div class="field">
+                      <label>金額</label>
+                      <br>
+                      <p-inputNumber class="w-full" mode="currency" currency="TWD" formControlName="amount" [minFractionDigits]="0"></p-inputNumber>
+                    </div>
                   </div>
                 </div>
                 <div class="col-12 md:col-6 lg:col-6">
