feat: #18 order table status filter

--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -14,11 +14,15 @@
                currentPageReportTemplate="共 {totalRecords} 筆" [loading]="loading">
         <ng-template pTemplate="caption">
           <div class="flex">
-            <div class="flex align-items-center ml-2">
-              <span class="text-400 pi pi-circle-fill mr-1"></span>
-              <span>{{status[0].name}}</span>
-              <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
-              <span>{{status[1].name}}</span>
+            <div class="status flex align-items-center">
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(0)" [ngClass]="{'status-focus': status[0].boolean}">
+                <span class="text-400 pi pi-circle-fill mr-1"></span>
+                <span class="font-bold text-color">{{status[0].name}}</span>
+              </p-button>
+              <p-button styleClass="p-button-rounded p-button-text" (click)="toggleStatusFilter(1)" [ngClass]="{'status-focus': status[0].boolean}">
+                <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
+                <span class="font-bold text-color">{{status[1].name}}</span>
+              </p-button>
             </div>
             <span class="p-input-icon-left ml-auto">
 
